--- a/style.css
+++ b/style.css
@@ -1,8 +1,265 @@
+@font-face {
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy-Regular.ttf") format("truetype");
+}
+/* Basic CSS Reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Gilroy";
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+li {
+  list-style: none;
+}
+
+.header {
+  background-color: #F7DBA7;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__img {
+  margin-left: 4rem;
+  width: 130px;
+  height: 40px;
+}
+.header__nav {
+  width: 80vh;
+}
+.header__nav-list {
+  font-weight: 800;
+  color: #003459;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 4rem;
+}
+.header__bubble {
+  margin-right: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__bubble-input {
+  margin-right: 1rem;
+  padding: 1rem;
+  border-radius: 50px;
+  background-color: #FFFFFF;
+}
+.header__bubble-input input {
+  border: none;
+  outline: none;
+  margin-left: 1rem;
+}
+.header__bubble-link {
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: #003459;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 5vh;
+  height: 100%;
+  width: 100%;
+  background-color: #F7DBA7;
+  padding: 0 0 0 10vh;
+}
+.main__content-left {
+  margin-top: 5vh;
+  display: flex;
+  flex-direction: column;
+}
+.main__content-left-title {
+  font-size: 4rem;
+  font-weight: 800;
+  color: #003459;
+}
+.main__content-left-subtitle {
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #003459;
+  margin-bottom: 2rem;
+}
+.main__content-left-description {
+  font-size: 0.8rem;
+  font-weight: 800;
+  color: #00171F;
+  margin-bottom: 2rem;
+}
+.main__content-left-containerbtn {
+  display: flex;
+}
+.main__content-left-containerbtn-button {
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: #003459;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 10vw;
+}
+.main__content-left-containerbtn-button-1 {
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: transparent;
+  color: #00171F;
+  border: none;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border: 1px solid #00171F;
+  width: 10vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+.main__content-left-containerbtn-button-1 img {
+  margin-left: 5px;
+  border: 1px solid #003459;
+  border-radius: 50px;
+}
+.main .dog {
+  width: 60%;
+  height: 100vh;
+  object-fit: cover;
+  margin-top: -5vh;
+}
+.main__pets {
+  width: 100%;
+  padding: 0 10vw 0 10vw;
+}
+.main__pets-header {
+  display: flex;
+  justify-content: space-between;
+}
+.main__pets-header-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: transparent;
+  color: #00171F;
+  border: none;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border: 1px solid #00171F;
+  width: 10vw;
+}
+.main__pets-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin-top: 10vh;
+  gap: 10px;
+}
+.main__pets-container-card {
+  height: 52vh;
+  background-color: #FFFFFF;
+  color: #00171F;
+  border-radius: 10px;
+  padding: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: 0.3s ease;
+  display: flex;
+  flex-direction: column;
+}
+.main__pets-container-card img {
+  border-radius: 10px;
+  width: 17vw;
+  height: 70%;
+  object-fit: cover;
+}
+.main__pets-container-card img:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+.main__pets-container-card-title {
+  margin-top: 2vh;
+  font-size: 1rem;
+  font-weight: 800;
+  margin-bottom: 0.5rem;
+}
+.main__pets-container-card-info {
+  color: #667479;
+  margin-bottom: 0.5rem;
+}
+.main__pets-container-card-price {
+  font-weight: 800;
+  color: #00171F;
+}
+.main__cta {
+  display: flex;
+  align-items: center;
+  margin-top: 4rem;
+  width: 80%;
+  background-color: #F7DBA7;
+  border-radius: 10px;
+}
+.main__cta-text {
+  margin-right: 4rem;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+.main__cta-text-title {
+  font-size: 3rem;
+  font-weight: 800;
+  color: #003459;
+}
+.main__cta-text-subtitle {
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #003459;
+  margin-bottom: 2rem;
+}
+.main__cta-text-description {
+  font-size: 0.9rem;
+  font-weight: 800;
+  color: #00171F;
+  margin-bottom: 2rem;
+}
+.main__cta img {
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=style.css.map */
