--- a/_var.scss
+++ b/_var.scss
@@ -6,6 +6,7 @@ $black:#00171F;
 $white:#FFFFFF;
 $transparent: transparent;
 $light-black:#667479;
+$blue:#00A7E7;
 
 //Font 
 
@@ -22,6 +23,7 @@ $font-weight-bold: 800;
 
 //Padding
 
+$small-padding: 0.5rem;
 $padding: 1rem;
 $padding-2x: 2rem;
 $padding-3x: 3rem;
