--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ li {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  border: 1px solid #00171F;
+  border: 2px solid #003459;
   width: 10vw;
   display: flex;
   align-items: center;
@@ -194,7 +194,6 @@ li {
   gap: 10px;
 }
 .main__pets-container-card {
-  height: 52vh;
   background-color: #FFFFFF;
   color: #00171F;
   border-radius: 10px;
@@ -258,8 +257,181 @@ li {
   color: #00171F;
   margin-bottom: 2rem;
 }
+.main__cta-text-containerbtn {
+  display: flex;
+  justify-content: right;
+}
+.main__cta-text-containerbtn-button {
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: #003459;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 10vw;
+}
+.main__cta-text-containerbtn-button-1 {
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: transparent;
+  color: #00171F;
+  border: none;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border: 2px solid #003459;
+  width: 10vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+.main__cta-text-containerbtn-button-1 img {
+  margin-left: 5px;
+  border: 1px solid #003459;
+  border-radius: 50px;
+}
 .main__cta img {
   object-fit: cover;
+}
+.main__info {
+  margin-top: 4rem;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.main__info-header {
+  display: flex;
+  justify-content: space-between;
+}
+.main__info-header-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: transparent;
+  color: #00171F;
+  border: none;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border: 1px solid #00171F;
+  width: 10vw;
+}
+.main__info-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 10vh;
+  gap: 10px;
+}
+.main__info-container-card {
+  background-color: #FFFFFF;
+  color: #00171F;
+  border-radius: 10px;
+  padding: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 26vw;
+  transition: 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  transition: 0.3s ease;
+}
+.main__info-container-card:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+.main__info-container-card-text-title {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem;
+  font-size: 0.8rem;
+  font-weight: 800;
+  color: #FFFFFF;
+  background-color: #00A7E7;
+  width: 30%;
+  border-radius: 50px;
+}
+.main__info-container-card-text-subtitle {
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: 800;
+  color: #003459;
+  margin-bottom: 0.5rem;
+}
+.main__footer {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #F7DBA7;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 10vh;
+}
+.main__footer-input {
+  justify-content: space-between;
+  background-color: #003459;
+  color: #FFFFFF;
+  padding: 1rem;
+  border-radius: 10px;
+  display: flex;
+  width: 80%;
+}
+.main__footer-input-title {
+  font-size: 2rem;
+  font-weight: 800;
+  margin-right: 1rem;
+}
+.main__footer-input-container {
+  background-color: #FFFFFF;
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 10px;
+}
+.main__footer-input-container input {
+  border: 2px solid #667479;
+  margin-left: 8px;
+  width: 85%;
+  height: 70%;
+  padding: 5px;
+  outline: none;
+  border-radius: 10px;
+}
+.main__footer-input-container input::placeholder {
+  margin-left: 1rem;
+}
+.main__footer-input-container-button {
+  width: 35vh;
+  display: inline-block;
+  padding: 1rem;
+  background-color: #003459;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  height: 70%;
+  margin: 0 10px 0 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
